--- a/less/footer.less
+++ b/less/footer.less
@@ -25,7 +25,7 @@ footer{
       }
       @media @phone{
           width: 100%;
-          margin-bottom: 4rem;
+          margin-bottom: 6.8rem;
       }
 
 
