--- a/less/nav.less
+++ b/less/nav.less
@@ -45,7 +45,7 @@
 .mobileNav {
     .display-flex(space-between, center);
     flex-direction: row-reverse;
-    background-color: @lightHenna;
+    background-color: rgba( @lightHenna, 0.9 );
     width: 100%;
     position: fixed;
     bottom: 0;
@@ -55,12 +55,12 @@
 
         .tab {
             .display-flex(center, center);
-            background-color: @lightHenna;
+            // background-color: rgba( @lightHenna, 0.5 );
             padding: 1rem 2rem;
         }
 
         .active {
-            background-color: @Orange;
+            background-color: rgba(@Orange, 0.8);
         }
 
 }
